--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <div class="main">
-      <img src="/images/image-qr-code.png" alt=" qr-code" />
+      <img src="./images/image-qr-code.png" alt=" qr-code" />
       <div class="paragraph">
         <p class="p1">Improve your front-end skills by building projects</p>
         <p class="p2">
